[gd_scene load_steps=4 format=3 uid="uid://oun3she1p3m1"]

[ext_resource type="Script" uid="uid://bubx1luitveso" path="res://Scripts/UI/StateIndicator/StateIndicator.gd" id="1_6g36u"]
[ext_resource type="Texture2D" uid="uid://btmalk60r8n8m" path="res://icon.svg" id="2_a6oa0"]

[sub_resource type="CanvasTexture" id="CanvasTexture_kx14v"]

[node name="StateIndicator" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6g36u")

[node name="StateIndicatorIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("2_a6oa0")
expand_mode = 3

[node name="IconTextureProgressBar" type="TextureProgressBar" parent="StateIndicatorIcon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 5
nine_patch_stretch = true
texture_progress = SubResource("CanvasTexture_kx14v")
tint_progress = Color(0.202552, 0.358798, 0.831896, 0.709804)
